<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_label_number1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/txtNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/ui_label_result"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="numberDecimal"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnAddition"
            android:layout_margin="8dp"
            android:width="150dp"
            android:height="50dp"
            android:text="@string/ui_label_addition"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnSubtract"
            android:layout_margin="8dp"
            android:width="150dp"
            android:height="50dp"
            android:text="@string/ui_label_subtraction"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnMultiple"
            android:layout_margin="8dp"
            android:width="150dp"
            android:height="50dp"
            android:text="@string/ui_label_multiplication"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_margin="8dp"
            android:width="150dp"
            android:height="50dp"
            android:text="@string/ui_label_division"
            android:textAppearance="?android:attr/textAppearanceLarge" />


    </GridLayout>

</LinearLayout>
